# trace-code

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_tavily_direct.py
planning/: 01-architecture-overview.md  02-technical-spec.md  03-implementation-roadmap.md  04-task-backlog.md  05-mcp-and-rag-design.md  06-risks-decisions-open-questions.md  07-end-to-end-acceptance-scenario.md  08-state-diagram.md  09-sequence-diagrams.md  10-demo-dry-run.md
tests/integration/: test_agent_and_mcp_paths.py  test_agent_autonomous_completion.py  test_agent_provider_fallback.py  test_cli_interactive_loop.py  test_cli_startup.py  test_required_mcp_servers_invoked.py  test_retry_integration.py  test_workspace_and_session_flow.py
tests/perf/: README.md  conftest.py  reporter.py  test_baseline.py
tests/unit/: test_agent_autonomous_loop.py  test_cli_main.py  test_cli_preflight.py  test_cli_router.py  test_cli_streaming.py  test_compression_policy.py  test_config_defaults.py  test_config_init.py  test_langchain_docs_knowledge.py  test_llm_manager.py  test_mcp_command_resolution.py  test_mcp_filesystem_client_parse.py  test_mcp_manager.py  test_provider_contract_shape.py  test_provider_keys.py  test_rag_augment.py  test_retry_policy.py  test_safety_classifier.py  test_sessions_store.py  test_tools_executor_knowledge.py  test_tools_executor_mcp.py  test_tools_executor_safety.py  test_tools_executor_structured.py  test_tools_executor_web_search.py  test_web_search_server.py
trace_code/: config.py  config_init.py
trace_code/agent/: loop.py
trace_code/cli/: app.py  main.py  (+3 more)
(+40 files in other folders)
