[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-code"
version = "0.1.0"
description = "Trace CLI assistant"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "fastmcp",
    "langchain-core",
    "langchain-community",
    "langchain-experimental",
    "sentence-transformers",
]

[project.scripts]
trace = "trace_code.cli.main:main"

[tool.setuptools.packages.find]
include = ["trace_code*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
